# corecpp_ctest_talk

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  build_release.sh
coverage_example/: CMakeLists.txt
coverage_example/cmake/: Coverage.cmake
coverage_example/src/: CMakeLists.txt
coverage_example/test/: CMakeLists.txt  catch2test.cpp
lcov_example/: CMakeLists.txt
lcov_example/src/: CMakeLists.txt  main.cpp  system_under_test.cpp  system_under_test.h
lcov_example/test/: CMakeLists.txt  coverage_test.cpp
log_message_example/: CMakeLists.txt
log_message_example/src/: BaseMessage.h  LogMessage.h
log_message_example/test/: CMakeLists.txt  catch2test.cpp  googletest.cpp  noframework.cpp
src/: BaseMessage.h  LogMessage.h
test/: CMakeLists.txt  catch2test.cpp  googletest.cpp
